--- a/app/src/main/res/values/shape.xml
+++ b/app/src/main/res/values/shape.xml
@@ -5,9 +5,9 @@
         <item name="cornerFamily">rounded</item>
 
         <item name="cornerSizeTopLeft">0dp</item>
-        <item name="cornerSizeTopRight">0dp</item>
+        <item name="cornerSizeTopRight">@dimen/fab_corner_radius</item>
         <item name="cornerSizeBottomRight">0dp</item>
-        <item name="cornerSizeBottomLeft">0dp</item>
+        <item name="cornerSizeBottomLeft">@dimen/fab_corner_radius</item>
     </style>
 
     <dimen name="fab_corner_radius">30dp</dimen>
